[metadata]
name = deathbycaptcha
version = 4.6.3
author = DeathByCaptcha
author_email = deathbycaptcha@protonmail.com
description = DeathByCaptcha Python Client library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbycaptcha/python_client_library
project_urls =
    Bug Tracker = https://github.com/deathbycaptcha/python_client_library/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
